# shell-history-cleaner

./: .gitignore  Cargo.toml  README.md
src/: cli_args.rs  filter_duplicates.rs  main.rs
