[package]
name = "shell-history-cleaner"
version = "0.3.1"
description = "Clean your bash/shell history"
authors = ["Vasya Novikov <n1dr+cm3513git@ya.ru>"]
license="GPL-3.0-or-later"
edition="2021"
readme = "README.md"
keywords = ["shell", "bash", "cli"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.8.1"
clap = { version = "3.2", features = ["derive"] }

[profile.release]
lto = true
